--- a/src/components/game-card/game-card.styles.scss
+++ b/src/components/game-card/game-card.styles.scss
@@ -6,8 +6,14 @@
   width: 25%;
   border-radius: 10px;
 
+  @media (max-width: 768px) {
+    width: unset;
+  }
+
   &:hover {
     cursor: pointer;
+    box-shadow: inset -1px -1px 3px 0 rgba(255, 255, 255, 1),
+      inset 1px 1px 2px 0 rgba(0, 0, 0, 0.2);
   }
 
   .cover-image {
