feat: add release date and platforms to game card and game page, fix: ensure games with no release date do not show in search results

--- a/src/components/game-card/game-card.styles.scss
+++ b/src/components/game-card/game-card.styles.scss
@@ -1,5 +1,5 @@
 .game-card {
-  text-align: center;
+  text-align: left;
   box-shadow: -5px -10px 13px 0 white, 5px 10px 13px 0 rgb(0 0 0 / 15%);
   padding: 1rem;
   margin: 1.5%;
@@ -20,5 +20,13 @@
   .cover-image {
     max-width: 100%;
     height: auto;
+  }
+
+  .game-title {
+    margin: 5px 0;
+  }
+
+  .game-data {
+    margin: 5px 0;
   }
 }
