--- a/src/pages/game/game.styles.scss
+++ b/src/pages/game/game.styles.scss
@@ -34,6 +34,10 @@
     @media (max-width: 768px) {
       margin-left: 0;
     }
+
+    > .game-data {
+      font-weight: bold;
+    }
   }
 
   .similar-container {
